Add an entry point

--- a/setup.cfg
+++ b/setup.cfg
@@ -24,6 +24,10 @@ classifier =
 packages =
     gearstore
 
+[entry_points]
+console_scripts =
+    gearstore = gearstore.cmd:main
+
 [build_sphinx]
 source-dir = doc/source
 build-dir = doc/build
