Adding gearstore-init-schema command
Needed to bootstrap gearstores.

--- a/setup.cfg
+++ b/setup.cfg
@@ -27,6 +27,7 @@ packages =
 [entry_points]
 console_scripts =
     gearstore = gearstore.cmd:main
+    gearstore-init-schema = gearstore.cmd:init_schema
 
 [build_sphinx]
 source-dir = doc/source
